rjournal.github.io stuff

--- a/_config.yml
+++ b/_config.yml
@@ -74,6 +74,76 @@ issues:
     - Survival
     suppl: 3 Kb
     landing: '2019'
+  - slug: RJ-2019-044
+    title: 'Fitting Tails by the Empirical Residual Coefficient of Variation: The
+      ercv Package'
+    bibtitle: |-
+      Fitting Tails by the Empirical Residual Coefficient of
+                Variation: The ercv Package
+    author:
+    - Joan del Castillo
+    - Isabel Serra
+    - Maria Padilla
+    - David Moriña
+    bibauthor: |-
+      Joan del Castillo and Isabel Serra and Maria Padilla and
+                David Moriña
+    abstract: '  Abstract This article is a self-contained introduction to the R package
+      ercv and to the methodology on            which it is based through the analysis
+      of nine examples. The methodology is simple and trustworthy            for the
+      analysis of extreme values and relates the two main existing methodologies.
+      The package            contains R functions for visualizing, fitting and validating
+      the distribution of tails. It also provides            multiple threshold tests
+      for a generalized Pareto distribution, together with an automatic threshold            selection
+      algorithm.'
+    acknowledged: '2018-10-26'
+    online: '2019-12-27'
+    suppl: 1.8 Kb
+    landing: '2019'
+  - slug: RJ-2019-045
+    title: 'biclustermd: An R Package for Biclustering with Missing Values'
+    bibtitle: |-
+      biclustermd: An R Package for Biclustering with Missing
+                Values
+    author:
+    - John Reisner
+    - Hieu Pham
+    - Sigurdur Olafsson
+    - Stephen Vardeman
+    - Jing Li
+    bibauthor: |-
+      John Reisner and Hieu Pham and Sigurdur Olafsson and Stephen
+                Vardeman and Jing Li
+    abstract: ' Abstract Biclustering is a statistical learning technique that attempts
+      to find homogeneous partitions           of rows and columns of a data matrix.
+      For example, movie ratings might be biclustered to group both           raters
+      and movies. biclust is a current R package allowing users to implement a variety
+      of biclustering           algorithms. However, its algorithms do not allow the
+      data matrix to have missing values. We provide           a new R package, biclustermd,
+      which allows users to perform biclustering on numeric data even in           the
+      presence of missing values.'
+    acknowledged: []
+    online: '2019-12-27'
+    CRANpkgs:
+    - biclust
+    - superbiclust
+    - s4vd
+    - BiBitR
+    - biclustermd
+    - clues
+    - nycflights13
+    - tidyverse
+    - ggplot2
+    BIOpkgs:
+    - iBBiG
+    - QUBIC
+    CTV_rev:
+    - Graphics
+    - Cluster
+    - Phylogenetics
+    - TeachingStatistics
+    suppl: 3.1 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
