--- a/_config.yml
+++ b/_config.yml
@@ -144,6 +144,47 @@ issues:
     - TeachingStatistics
     suppl: 3.1 Kb
     landing: '2019'
+  - slug: RJ-2019-046
+    title: 'PPCI: an R Package for Cluster Identification using Projection Pursuit'
+    bibtitle: |-
+      PPCI: an R Package for Cluster Identification using
+                Projection Pursuit
+    author:
+    - David P. Hofmeyr
+    - Nicos G. Pavlidis
+    bibauthor: David P. Hofmeyr and Nicos G. Pavlidis
+    abstract: '  Abstract This paper presents the R package PPCI which implements
+      three recently proposed projection            pursuit methods for clustering.
+      The methods are unified by the approach of defining an optimal            hyperplane
+      to separate clusters, and deriving a projection index whose optimiser is the
+      vector normal            to this separating hyperplane. Divisive hierarchical
+      clustering algorithms that can detect clusters            defined in different
+      subspaces are readily obtained by recursively bi-partitioning the data through
+      such            hyperplanes. Projecting onto the vector normal to the optimal
+      hyperplane enables visualisations of the            data that can be used to
+      validate the partition at each level of the cluster hierarchy. PPCI also provides            a
+      simplified framework in which the clustering models can be modified in an interactive
+      manner.            Extensions to problems involving clusters which are not linearly
+      separable, and to the problem of            finding maximum hard margin hyperplanes
+      for clustering are also discussed.'
+    acknowledged: '2018-03-02'
+    online: '2019-12-27'
+    CRANpkgs:
+    - PPCI
+    - ProjectionBasedClustering
+    - subspace
+    - cluster
+    - kernlab
+    CTV_rev:
+    - Cluster
+    - Multivariate
+    - Environmetrics
+    - MachineLearning
+    - NaturalLanguageProcessing
+    - Optimization
+    - Robust
+    suppl: 5.7 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
