rjournal.github.io stuff

--- a/_config.yml
+++ b/_config.yml
@@ -185,6 +185,56 @@ issues:
     - Robust
     suppl: 5.7 Kb
     landing: '2019'
+  - slug: RJ-2019-048
+    title: 'Associative Classification in R: arc, arulesCBA, and rCBA'
+    bibtitle: 'Associative Classification in R: arc, arulesCBA, and rCBA'
+    author:
+    - Michael Hahsler
+    - Ian Johnson
+    - Tomáš Kliegr
+    - Jaroslav Kuchař
+    bibauthor: |-
+      Michael Hahsler and Ian Johnson and Tomáš Kliegr and
+                Jaroslav Kuchař
+    abstract: '  Abstract Several methods for creating classifiers based on rules
+      discovered via association rule            mining have been proposed in the
+      literature. These classifiers are called associative classifiers and            the
+      best-known algorithm is Classification Based on Associations (CBA). Interestingly,
+      only very few            implementations are available and, until recently,
+      no implementation was available for R. Now, three            packages provide
+      CBA. This paper introduces associative classification, the CBA algorithm, and
+      how            it can be used in R. A comparison of the three packages is provided
+      to give the potential user an idea            about the advantages of each of
+      the implementations. We also show how the packages are related to            the
+      existing infrastructure for association rule mining already available in R.'
+    acknowledged: '2018-05-29'
+    online: '2019-12-27'
+    CRANpkgs:
+    - arc
+    - arulesCBA
+    - rCBA
+    - RWeka
+    - arules
+    - arulesViz
+    - qcba
+    - sbrl
+    - RKEEL
+    - discretization
+    - Matrix
+    - qCBA
+    - matrix
+    - rJAVA
+    - mlbench
+    - datasets
+    CTV_rev:
+    - MachineLearning
+    - ModelDeployment
+    - Econometrics
+    - Multivariate
+    - NaturalLanguageProcessing
+    - NumericalMathematics
+    suppl: 1.2 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
