rjournal.github.io stuff

--- a/_config.yml
+++ b/_config.yml
@@ -235,6 +235,49 @@ issues:
     - NumericalMathematics
     suppl: 1.2 Kb
     landing: '2019'
+  - slug: RJ-2019-049
+    title: 'mistr: A Computational Framework for Mixture and Composite Distributions'
+    bibtitle: |-
+      mistr: A Computational Framework for Mixture and Composite
+                Distributions
+    author:
+    - Lukas Sablica
+    - Kurt Hornik
+    bibauthor: Lukas Sablica and Kurt Hornik
+    abstract: ' Abstract Finite mixtures and composite distributions allow to model
+      the probabilistic representation           of data with more generality than
+      simple distributions and are useful to consider in a wide range           of
+      applications. The R package mistr provides an extensible computational framework
+      for creating,           transforming, and evaluating these models, together
+      with multiple methods for their visualization           and description. In
+      this paper we present the main computational framework of the package and           illustrate
+      its application. In addition, we provide and show functions for data modeling
+      using two           specific composite distributions as well as a numerical
+      example where a composite distribution is           estimated to describe the
+      log-returns of selected stocks.'
+    acknowledged: []
+    online: '2019-12-27'
+    CRANpkgs:
+    - mistr
+    - distr
+    - CompLognormal
+    - evmix
+    - OpVar
+    - ReIns
+    - gendist
+    - ggplot2
+    - actuar
+    - bbmle
+    CTV_rev:
+    - Distributions
+    - ExtremeValue
+    - Finance
+    - Graphics
+    - Phylogenetics
+    - Robust
+    - TeachingStatistics
+    suppl: 1.9 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
