rjournal.github.io stuff

--- a/_config.yml
+++ b/_config.yml
@@ -278,6 +278,36 @@ issues:
     - TeachingStatistics
     suppl: 1.9 Kb
     landing: '2019'
+  - slug: RJ-2019-050
+    title: Comparing namedCapture with other R packages for regular expressions
+    bibtitle: |-
+      Comparing namedCapture with other R packages for regular
+                expressions
+    author: Toby Dylan Hocking
+    bibauthor: Toby Dylan Hocking
+    abstract: '  Abstract Regular expressions are powerful tools for manipulating
+      non-tabular textual data. For many            tasks (visualization, machine
+      learning, etc), tables of numbers must be extracted from such data before            processing
+      by other R functions. We present the R package namedCapture, which facilitates
+      such            tasks by providing a new user-friendly syntax for defining regular
+      expressions in R code. We begin by            describing the history of regular
+      expressions and their usage in R. We then describe the new features of            the
+      namedCapture package, and provide detailed comparisons with related R packages
+      (rex, stringr,            stringi, tidyr, rematch2, re2r).'
+    acknowledged: []
+    online: '2019-12-27'
+    CRANpkgs:
+    - namedCapture
+    - rex
+    - stringr
+    - stringi
+    - tidyr
+    - rematch2
+    - re2r
+    - microbenchmark
+    CTV_rev: NaturalLanguageProcessing
+    suppl: 2.2 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
