rjournal.github.io stuff

--- a/_config.yml
+++ b/_config.yml
@@ -308,6 +308,60 @@ issues:
     CTV_rev: NaturalLanguageProcessing
     suppl: 2.2 Kb
     landing: '2019'
+  - slug: RJ-2019-051
+    title: black Resampling-Based Analysis of Multivariate Data and Repeated Measures
+      Designs with the R Package MANOVA.RM
+    bibtitle: |-
+      black Resampling-Based Analysis of Multivariate Data and
+                Repeated Measures Designs with the R Package MANOVA.RM
+    author:
+    - Sarah Friedrich
+    - Frank Konietschke
+    - Markus Pauly
+    bibauthor: Sarah Friedrich and Frank Konietschke and Markus Pauly
+    abstract: '  Abstract Nonparametric statistical inference methods for a modern
+      and robust analysis of longitudinal            and multivariate data in factorial
+      experiments are essential for research. While existing approaches            that
+      rely on specific distributional assumptions of the data (multivariate normality
+      and/or equal            covariance matrices) are implemented in statistical
+      software packages, there is a need for user-friendly            software that
+      can be used for the analysis of data that do not fulfill the aforementioned
+      assumptions            and provide accurate p value and confidence interval
+      estimates. Therefore, newly developed nonpara           metric statistical methods
+      based on bootstrapand permutation-approaches, which neither assume            multivariate
+      normality nor specific covariance matrices, have been implemented in the freely
+      available            R package MANOVA.RM. The package is equipped with a graphical
+      user interface for plausible            applications in academia and other educational
+      purpose. Several motivating examples illustrate the            application of
+      the methods.'
+    acknowledged: []
+    online: '2019-12-27'
+    CRANpkgs:
+    - stats
+    - npmv
+    - nparLD
+    - GFD
+    - SCGLR
+    - car
+    - flip
+    - ffmanova
+    - MANOVA.RM
+    - RGtk2
+    - plotrix
+    - HSAUR
+    - ellipse
+    - multcomp
+    CTV_rev:
+    - Graphics
+    - Multivariate
+    - SocialSciences
+    - ClinicalTrials
+    - Econometrics
+    - Finance
+    - Survival
+    - TeachingStatistics
+    suppl: 1.4 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
