--- a/_config.yml
+++ b/_config.yml
@@ -362,6 +362,39 @@ issues:
     - TeachingStatistics
     suppl: 1.4 Kb
     landing: '2019'
+  - slug: RJ-2019-052
+    title: 'lpirfs: An R package to estimate impulse response functions by local projections'
+    bibtitle: |-
+      lpirfs: An R package to estimate impulse response functions
+                by local projections
+    author: Philipp Adämmer
+    bibauthor: Philipp Adämmer
+    abstract: '  Abstract Impulse response analysis is a cornertsone in applied (macro-)econometrics.
+      Estimating            impulse response functions by local projections (LP) has
+      become an appealing alternative to the            traditional SVAR approach,
+      since LP impose less restrictions on the data generating process. Despite            its
+      growing popularity and applications, no R package yet existed which uses this
+      method. In this            paper, I introduce lpirfs, a fast and flexible R
+      package that provides a broad framework to compute            and visualize
+      impulse response functions by LP for a variety of data sets.'
+    acknowledged: '2019-07-01'
+    online: '2019-12-27'
+    CRANpkgs:
+    - lpirfs
+    - vars
+    - Rcpp
+    - plm
+    - ggpubr
+    - gridExtra
+    CTV_rev:
+    - Econometrics
+    - Finance
+    - HighPerformanceComputing
+    - NumericalMathematics
+    - SpatioTemporal
+    - TimeSeries
+    suppl: 2.7 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
