--- a/_config.yml
+++ b/_config.yml
@@ -395,6 +395,45 @@ issues:
     - TimeSeries
     suppl: 2.7 Kb
     landing: '2019'
+  - slug: RJ-2019-053
+    title: 'spGARCH: An R-Package for Spatial and Spatiotemporal ARCH and GARCH models'
+    bibtitle: |-
+      spGARCH: An R-Package for Spatial and Spatiotemporal ARCH
+                and GARCH models
+    author: Philipp Otto
+    bibauthor: Philipp Otto
+    abstract: ' Abstract In this paper, a general overview on spatial and spatiotemporal
+      ARCH models is provided.           In particular, we distinguish between three
+      different spatial ARCH-type models. In addition to           the original definition
+      of ?, we introduce an logarithmic spatial ARCH model in this paper. For           this
+      new model, maximum-likelihood estimators for the parameters are proposed. In
+      addition, we           consider a new complex-valued definition of the spatial
+      ARCH process. Moreover, spatial GARCH           models are briefly discussed.
+      From a practical point of view, the use of the R-package spGARCH is           demonstrated.
+      To be precise, we show how the proposed spatial ARCH models can be simulated           and
+      summarize the variety of spatial models, which can be estimated by the estimation
+      functions           provided in the package. Eventually, we apply all procedures
+      to a real-data example.'
+    acknowledged: []
+    online: '2019-12-28'
+    CRANpkgs:
+    - spGARCH
+    - spdep
+    - gstat
+    - Stem
+    - rugarch
+    - Rsolnp
+    - Rcpp
+    - RcppEigen
+    CTV_rev:
+    - Spatial
+    - NumericalMathematics
+    - SpatioTemporal
+    - Finance
+    - HighPerformanceComputing
+    - Optimization
+    - TimeSeries
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
