superfluous word somehow in title of 2019-144

--- a/_config.yml
+++ b/_config.yml
@@ -309,7 +309,7 @@ issues:
     suppl: 2.2 Kb
     landing: '2019'
   - slug: RJ-2019-051
-    title: black Resampling-Based Analysis of Multivariate Data and Repeated Measures
+    title: Resampling-Based Analysis of Multivariate Data and Repeated Measures
       Designs with the R Package MANOVA.RM
     bibtitle: |-
       black Resampling-Based Analysis of Multivariate Data and
