rjournal.github.io stuff

--- a/_config.yml
+++ b/_config.yml
@@ -309,8 +309,8 @@ issues:
     suppl: 2.2 Kb
     landing: '2019'
   - slug: RJ-2019-051
-    title: Resampling-Based Analysis of Multivariate Data and Repeated Measures
-      Designs with the R Package MANOVA.RM
+    title: Resampling-Based Analysis of Multivariate Data and Repeated Measures Designs
+      with the R Package MANOVA.RM
     bibtitle: |-
       black Resampling-Based Analysis of Multivariate Data and
                 Repeated Measures Designs with the R Package MANOVA.RM
@@ -434,6 +434,63 @@ issues:
     - Optimization
     - TimeSeries
     landing: '2019'
+  - slug: RJ-2020-001
+    title: The R Package trafo for Transforming Linear Regression Models
+    bibtitle: |-
+      The R Package trafo for Transforming Linear Regression
+                Models
+    author:
+    - Lily Medina
+    - Ann-Kristin Kreutzmann
+    - Natalia Rojas-Perilla
+    - Piedad Castro
+    bibauthor: |-
+      Lily Medina and Ann-Kristin Kreutzmann and Natalia Rojas-
+                Perilla and Piedad Castro
+    abstract: '  Abstract Researchers and data-analysts often use the linear regression
+      model for descriptive, predictive,            and inferential purposes. This
+      model relies on a set of assumptions that, when not satisfied, yields            biased
+      results and noisy estimates. A common problem that can be solved in many ways
+      – use of less            restrictive methods (e.g. generalized linear regression
+      models or non-parametric methods ), variance            corrections or transformations
+      of the response variable just to name a few. We focus on the latter            option
+      as it allows to keep using the simple and well-known linear regression model.
+      The list of            transformations proposed in the literature is long and
+      varies according to the problem they aim to            solve. Such diversity
+      can leave analysts lost and confused. We provide a framework implemented            as
+      an R-package, trafo, to help selecting a suitable transformation depending on
+      the user and data            needs. The package trafo contains a collection
+      of selected transformations and estimation methods            that complement
+      and enlarge the methods that exist in R so far.'
+    acknowledged: '2018-12-01'
+    online: '2020-01-06'
+    CRANpkgs:
+    - trafo
+    - car
+    - rcompanio
+    - bestNormalize
+    - caret
+    - Johnson
+    - jtrans
+    - MASS
+    - AID
+    - Ecdat
+    CTV_rev:
+    - Econometrics
+    - Multivariate
+    - SocialSciences
+    - TeachingStatistics
+    - Distributions
+    - Environmetrics
+    - Finance
+    - HighPerformanceComputing
+    - MachineLearning
+    - NumericalMathematics
+    - Psychometrics
+    - Robust
+    - TimeSeries
+    suppl: 1000 bytes
+    landing: '2020'
 - issue: 2009-1
   year: 2009
   volume: 1
