--- a/_config.yml
+++ b/_config.yml
@@ -491,6 +491,35 @@ issues:
     - TimeSeries
     suppl: 1000 bytes
     landing: '2020'
+  - slug: RJ-2020-002
+    title: 'BondValuation: An R Package for Fixed Coupon Bond Analysis'
+    bibtitle: 'BondValuation: An R Package for Fixed Coupon Bond Analysis'
+    author: Wadim Djatschenko
+    bibauthor: Wadim Djatschenko
+    abstract: '  Abstract The purpose of this paper is to introduce the R package
+      BondValuation for the analysis of            large datasets of fixed coupon
+      bonds. The conceptual heterogeneity of fixed coupon bonds traded            in
+      the global markets imposes a high degree of complexity on their comparative
+      analysis. Contrary            to baseline fixed income theory, in practice,
+      most bonds feature coupon period irregularities. In            addition, there
+      are a multitude of day count methods that determine the interest accrual, the
+      cash            flows and the discount factors used in bond valuation. Several
+      R packages, e.g., fBonds, RQuantLib,            and YieldCurve, provide tools
+      for fixed income analysis. Nevertheless, none of them is capable            of
+      evaluating bonds featuring irregular first and/or final coupon periods, and
+      neither provides            adequate coverage of day count conventions currently
+      used in the global bond markets. The R package            BondValuation closes
+      this gap using the generalized valuation methodology presented in ?.'
+    acknowledged: '2018-12-01'
+    online: '2020-01-06'
+    CRANpkgs:
+    - BondValuation
+    - fBonds
+    - RQuantLib
+    - YieldCurve
+    CTV_rev: Finance
+    suppl: 3.3 Kb
+    landing: '2020'
 - issue: 2009-1
   year: 2009
   volume: 1
