rjournal.github.io stuff

--- a/_config.yml
+++ b/_config.yml
@@ -520,6 +520,41 @@ issues:
     CTV_rev: Finance
     suppl: 3.3 Kb
     landing: '2020'
+  - slug: RJ-2020-003
+    title: 'Indoor Positioning and Fingerprinting: The R Package ipft'
+    bibtitle: 'Indoor Positioning and Fingerprinting: The R Package ipft'
+    author:
+    - Emilio Sansano
+    - Raúl Montoliu
+    - Óscar Belmonte
+    - Joaquín Torres-Sospedra
+    bibauthor: |-
+      Emilio Sansano and Raúl Montoliu and Óscar Belmonte and
+                Joaquín Torres-Sospedra
+    abstract: '  Abstract Methods based on Received Signal Strength Indicator (RSSI)
+      fingerprinting are in the            forefront among several techniques being
+      proposed for indoor positioning. This paper introduces            the R package
+      ipft, which provides algorithms and utility functions for indoor positioning
+      using            fingerprinting techniques. These functions are designed for
+      manipulation of RSSI fingerprint data            sets, estimation of positions,
+      comparison of the performance of different positioning models, and            graphical
+      visualization of data. Well-known machine learning algorithms are implemented
+      in this            package to perform analysis and estimations over RSSI data
+      sets. The paper provides a description            of these algorithms and functions,
+      as well as examples of its use with real data. The ipft package            provides
+      a base that we hope to grow into a comprehensive library of fingerprinting-based
+      indoor            positioning methodologies.'
+    acknowledged: '2018-02-02'
+    online: '2020-01-06'
+    CRANpkgs:
+    - ipft
+    - ggplot2
+    CTV_rev:
+    - Graphics
+    - Phylogenetics
+    - TeachingStatistics
+    suppl: 1.8 Kb
+    landing: '2020'
 - issue: 2009-1
   year: 2009
   volume: 1
