rjournal.github.io stuff

--- a/_config.yml
+++ b/_config.yml
@@ -555,6 +555,38 @@ issues:
     - TeachingStatistics
     suppl: 1.8 Kb
     landing: '2020'
+  - slug: RJ-2020-004
+    title: 'HCmodelSets: An R Package for Specifying Sets of Well-fitting Models in
+      High Dimensions'
+    bibtitle: |-
+      HCmodelSets: An R Package for Specifying Sets of Well-
+                fitting Models in High Dimensions
+    author:
+    - Henrique Hoeltgebaum
+    - Heather Battey
+    bibauthor: Henrique Hoeltgebaum and Heather Battey
+    abstract: '  Abstract In the context of regression with a large number of explanatory
+      variables, Cox and Battey            (2017) emphasize that if there are alternative
+      reasonable explanations of the data that are statistically            indistinguishable,
+      one should aim to specify as many of these explanations as is feasible. The
+      standard            practice, by contrast, is to report a single model effective
+      for prediction. The present paper illustrates            the R implementation
+      of the new ideas in the package HCmodelSets, using simple reproducible            examples
+      and real data. Results of some simulation experiments are also reported.'
+    acknowledged: []
+    online: '2020-01-06'
+    CRANpkgs:
+    - HCmodelSets
+    - glmnet
+    - survival
+    CTV_rev:
+    - Survival
+    - ClinicalTrials
+    - Econometrics
+    - MachineLearning
+    - SocialSciences
+    suppl: 1.3 Kb
+    landing: '2020'
 - issue: 2009-1
   year: 2009
   volume: 1
