--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,220 @@ issues:
     - TeachingStatistics
     suppl: 1.9 Kb
     landing: '2019'
+  - slug: RJ-2020-001
+    title: 'Mapping Smoothed Spatial Effect Estimates from Individual-Level Data:
+      MapGAM '
+    bibtitle: |-
+      Mapping Smoothed Spatial Effect Estimates from Individual-
+                Level Data: MapGAM
+    author:
+    - Lu Bai
+    - Daniel L. Gillen
+    - Scott M. Bartell
+    - Verónica M. Vieira
+    bibauthor: |-
+      Lu Bai and Daniel L. Gillen and Scott M. Bartell and
+                Verónica M. Vieira
+    abstract: '  Abstract We introduce and illustrate the utility of MapGAM, a user-friendly
+      R package that provides            a unified framework for estimating, predicting
+      and drawing inference on covariate-adjusted spatial            effects using
+      individual-level data. The package also facilitates visualization of spatial
+      effects via            automated mapping procedures. MapGAM estimates covariate-adjusted
+      spatial associations with            a univariate or survival outcome using
+      generalized additive models that include a non-parametric            bivariate
+      smooth term of geolocation parameters. Estimation and mapping methods are implemented            for
+      continuous, discrete, and right-censored survival data. In the current manuscript,
+      we summarize            the methodology implemented in MapGAM and illustrate
+      the package using two example simulated            datasets: the first considering
+      a case-control study design from the state of Massachusetts and the            second
+      considering right-censored survival data from California.'
+    acknowledged: '2018-04-04'
+    online: '2020-03-31'
+    CRANpkgs: MapGAM
+    suppl: 1.7 Kb
+    landing: '2020'
+  - slug: RJ-2020-002
+    title: 'mudfold: An R Package for Nonparametric IRT Modelling of Unfolding Processes'
+    bibtitle: |-
+      mudfold: An R Package for Nonparametric IRT Modelling of
+                Unfolding Processes
+    author:
+    - Spyros E. Balafas
+    - Wim P. Krijnen
+    - Wendy J. Post
+    - Ernst C. Wit
+    bibauthor: |-
+      Spyros E. Balafas and Wim P. Krijnen and Wendy J. Post and
+                Ernst C. Wit
+    abstract: '  Abstract Item response theory (IRT) models for unfolding processes
+      use the responses of individuals            to attitudinal tests or questionnaires
+      in order to infer item and person parameters located on a latent            continuum.
+      Parametric models in this class use parametric functions to model the response
+      process,            which in practice can be restrictive. MUDFOLD (Multiple
+      UniDimensional unFOLDing) can be used            to obtain estimates of person
+      and item ranks without imposing strict parametric assumptions on the            item
+      response functions (IRFs). This paper describes the implementation of the MUDFOLD
+      method            for binary preferential-choice data in the R package mudfold.
+      The latter incorporates estimation,            visualization, and simulation
+      methods in order to provide R users with utilities for nonparametric            analysis
+      of attitudinal questionnaire data. After a brief introduction in IRT, we provide
+      the method           ological framework implemented in the package. A description
+      of the available functions is followed            by practical examples and
+      suggestions on how this method can be used even outside the field of            psychometrics.'
+    acknowledged: '2018-12-11'
+    online: '2020-03-31'
+    CRANpkgs:
+    - mudfold
+    - GGUM
+    - mirt
+    - mokken
+    - boot
+    - mice
+    - gtools
+    - glmnet
+    - mgcv
+    - zoo
+    - reshape2
+    - ggplot2
+    - smacof
+    CTVs: Psychometrics
+    CTV_rev:
+    - Psychometrics
+    - Econometrics
+    - MissingData
+    - SocialSciences
+    - Environmetrics
+    - Survival
+    - TimeSeries
+    - Bayesian
+    - Finance
+    - Graphics
+    - MachineLearning
+    - Multivariate
+    - OfficialStatistics
+    - Optimization
+    - Phylogenetics
+    - TeachingStatistics
+    suppl: 2.4 Kb
+    landing: '2020'
+  - slug: RJ-2020-003
+    title: 'mistr: A Computational Framework for Mixture and Composite Distributions'
+    bibtitle: |-
+      mistr: A Computational Framework for Mixture and Composite
+                Distributions
+    author:
+    - Lukas Sablica
+    - Kurt Hornik
+    bibauthor: Lukas Sablica and Kurt Hornik
+    abstract: ' Abstract Finite mixtures and composite distributions allow to model
+      the probabilistic representation           of data with more generality than
+      simple distributions and are useful to consider in a wide range           of
+      applications. The R package mistr provides an extensible computational framework
+      for creating,           transforming, and evaluating these models, together
+      with multiple methods for their visualization           and description. In
+      this paper we present the main computational framework of the package and           illustrate
+      its application. In addition, we provide and show functions for data modeling
+      using two           specific composite distributions as well as a numerical
+      example where a composite distribution is           estimated to describe the
+      log-returns of selected stocks.'
+    acknowledged: []
+    online: '2019-12-27'
+    CRANpkgs:
+    - mistr
+    - distr
+    - CompLognormal
+    - evmix
+    - OpVar
+    - ReIns
+    - gendist
+    - ggplot2
+    - actuar
+    - bbmle
+    CTV_rev:
+    - Distributions
+    - ExtremeValue
+    - Finance
+    - Graphics
+    - Phylogenetics
+    - Robust
+    - TeachingStatistics
+    suppl: 1.9 Kb
+    landing: '2020'
+  - slug: RJ-2020-005
+    title: 'lspartition: Partitioning-Based Least Squares Regression'
+    bibtitle: 'lspartition: Partitioning-Based Least Squares Regression'
+    author:
+    - Matias D. Cattaneo
+    - Max H. Farrell
+    - Yingjie Feng
+    bibauthor: Matias D. Cattaneo and Max H. Farrell and Yingjie Feng
+    abstract: '  Abstract Nonparametric partitioning-based least squares regression
+      is an important tool in empirical            work. Common examples include regressions
+      based on splines, wavelets, and piecewise polynomials.            This article
+      discusses the main methodological and numerical features of the R software package            lspartition,
+      which implements results for partitioning-based least squares (series) regression
+      estimation            and inference from Cattaneo and Farrell (2013) and Cattaneo,
+      Farrell, and Feng (2020). These results            cover the multivariate regression
+      function as well as its derivatives. First, the package provides            data-driven
+      methods to choose the number of partition knots optimally, according to integrated
+      mean            squared error, yielding optimal point estimation. Second, robust
+      bias correction is implemented to            combine this point estimator with
+      valid inference. Third, the package provides estimates and inference            for
+      the unknown function both pointwise and uniformly in the conditioning variables.
+      In particular,            valid confidence bands are provided. Finally, an extension
+      to two-sample analysis is developed, which            can be used in treatment-control
+      comparisons and related problems.'
+    acknowledged: []
+    online: '2020-03-31'
+    CRANpkgs: ggplot2
+    CTV_rev:
+    - Graphics
+    - Phylogenetics
+    - TeachingStatistics
+    suppl: 1.9 Kb
+    landing: '2020'
+  - slug: RJ-2020-006
+    title: 'SortedEffects: Sorted Causal Effects in R'
+    bibtitle: 'SortedEffects: Sorted Causal Effects in R'
+    author:
+    - Shuowen Chen
+    - Victor Chernozhukov
+    - Iván Fernández-Val
+    - Ye Luo
+    bibauthor: |-
+      Shuowen Chen and Victor Chernozhukov and Iván Fernández-Val
+                and Ye Luo
+    abstract: '  Abstract Chernozhukov et al. (2018) proposed the sorted effect method
+      for nonlinear regression            models. This method consists of reporting
+      percentiles of the partial effects, the sorted effects, in            addition
+      to the average effect commonly used to summarize the heterogeneity in the partial
+      effects.            They also propose to use the sorted effects to carry out
+      classification analysis where the observational            units are classified
+      as most and least affected if their partial effect are above or below some tail
+      sorted            effects. The R package SortedEffects implements the estimation
+      and inference methods therein and            provides tools to visualize the
+      results. This vignette serves as an introduction to the package and            displays
+      basic functionality of the functions within.'
+    acknowledged: []
+    online: '2020-03-31'
+    CRANpkgs:
+    - SortedEffects
+    - SortedEffect
+    - quantreg
+    - margins
+    - parallel
+    - boot
+    CTV_rev:
+    - Econometrics
+    - Optimization
+    - SocialSciences
+    - Survival
+    - Environmetrics
+    - ReproducibleResearch
+    - Robust
+    - TimeSeries
+    suppl: 1.6 Kb
+    landing: '2020'
 - issue: 2009-1
   year: 2009
   volume: 1
