--- a/_config.yml
+++ b/_config.yml
@@ -141,49 +141,6 @@ issues:
     - TeachingStatistics
     suppl: 2.4 Kb
     landing: '2020'
-  - slug: RJ-2020-003
-    title: 'mistr: A Computational Framework for Mixture and Composite Distributions'
-    bibtitle: |-
-      mistr: A Computational Framework for Mixture and Composite
-                Distributions
-    author:
-    - Lukas Sablica
-    - Kurt Hornik
-    bibauthor: Lukas Sablica and Kurt Hornik
-    abstract: ' Abstract Finite mixtures and composite distributions allow to model
-      the probabilistic representation           of data with more generality than
-      simple distributions and are useful to consider in a wide range           of
-      applications. The R package mistr provides an extensible computational framework
-      for creating,           transforming, and evaluating these models, together
-      with multiple methods for their visualization           and description. In
-      this paper we present the main computational framework of the package and           illustrate
-      its application. In addition, we provide and show functions for data modeling
-      using two           specific composite distributions as well as a numerical
-      example where a composite distribution is           estimated to describe the
-      log-returns of selected stocks.'
-    acknowledged: []
-    online: '2019-12-27'
-    CRANpkgs:
-    - mistr
-    - distr
-    - CompLognormal
-    - evmix
-    - OpVar
-    - ReIns
-    - gendist
-    - ggplot2
-    - actuar
-    - bbmle
-    CTV_rev:
-    - Distributions
-    - ExtremeValue
-    - Finance
-    - Graphics
-    - Phylogenetics
-    - Robust
-    - TeachingStatistics
-    suppl: 1.9 Kb
-    landing: '2020'
   - slug: RJ-2020-005
     title: 'lspartition: Partitioning-Based Least Squares Regression'
     bibtitle: 'lspartition: Partitioning-Based Least Squares Regression'
@@ -1022,6 +979,50 @@ issues:
     CTV_rev:
     - Databases
     - ModelDeployment
+    landing: '2020'
+  - slug: RJ-2020-027
+    title: 'spinifex: An R Package for Creating a Manual Tour of Low-dimensional Projections
+      of Multivariate Data'
+    bibtitle: |-
+      spinifex: An R Package for Creating a Manual Tour of Low-
+                dimensional Projections of Multivariate Data
+    author:
+    - Nicholas Spyrison
+    - Dianne Cook
+    bibauthor: Nicholas Spyrison and Dianne Cook
+    abstract: '  Abstract Dynamic low-dimensional linear projections of multivariate
+      data collectively known as tours            provide an important tool for exploring
+      multivariate data and models. The R package tourr provides            functions
+      for several types of tours: grand, guided, little, local and frozen. Each of
+      these can be viewed            dynamically, or saved into a data object for
+      animation. This paper describes a new package, spinifex,            which provides
+      a manual tour of multivariate data where the projection coefficient of a single
+      variable            is controlled. The variable is rotated fully into the projection,
+      or completely out of the projection. The            resulting sequence of projections
+      can be displayed as an animation, with functions from either the            plotly
+      or gganimate packages. By varying the coefficient of a single variable, it is
+      possible to explore            the sensitivity of structure in the projection
+      to that variable. This is particularly useful when used            with a projection
+      pursuit guided tour to simplify and understand the solution. The use of the
+      manual            tour is applied particle physics data to illustrate the sensitivity
+      of structure in a projection to specific            variable contributions.'
+    acknowledged: '2019-07-18'
+    online: '2020-09-13'
+    CRANpkgs:
+    - tourr
+    - spinifex
+    - plotly
+    - gganimate
+    - ggplot2
+    - shiny
+    - knitr
+    - rmarkdown
+    CTV_rev:
+    - TeachingStatistics
+    - ReproducibleResearch
+    - WebTechnologies
+    - Graphics
+    - Phylogenetics
     landing: '2020'
 - issue: 2009-1
   year: 2009
