--- a/_config.yml
+++ b/_config.yml
@@ -1024,6 +1024,43 @@ issues:
     - Graphics
     - Phylogenetics
     landing: '2020'
+  - slug: RJ-2020-015
+    title: The R package NonProbEst for estimation in non-probability surveys
+    bibtitle: |-
+      The R package NonProbEst for estimation in non-probability
+                surveys
+    author:
+    - M. Rueda
+    - R. Ferri-García
+    - L. Castro
+    bibauthor: M. Rueda and R. Ferri-García and L. Castro
+    abstract: '  Abstract Different inference procedures are proposed in the literature
+      to correct selection bias that            might be introduced with non-random
+      sampling mechanisms. The R package NonProbEst enables            the estimation
+      of parameters using some of these techniques to correct selection bias in non-probability            surveys.
+      The mean and the total of the target variable are estimated using Propensity
+      Score Adjustment,            calibration, statistical matching, model-based,
+      model-assisted and model-calibratated techniques.            Confidence intervals
+      can also obtained for each method. Machine learning algorithms can be used            for
+      estimating the propensities or for predicting the unknown values of the target
+      variable for the            non-sampled units. Variance of a given estimator
+      is performed by two different Leave-One-Out            jackknife procedures.
+      The functionality of the package is illustrated with example data sets.'
+    acknowledged: '2020-04-05'
+    online: '2020-09-10'
+    CRANpkgs:
+    - NonProbEst
+    - caret
+    - sampling
+    - survey
+    CTV_rev:
+    - OfficialStatistics
+    - HighPerformanceComputing
+    - MachineLearning
+    - Multivariate
+    - SocialSciences
+    - Survival
+    landing: '2020'
 - issue: 2009-1
   year: 2009
   volume: 1
