--- a/_config.yml
+++ b/_config.yml
@@ -1061,6 +1061,40 @@ issues:
     - SocialSciences
     - Survival
     landing: '2020'
+  - slug: RJ-2020-019
+    title: Skew-t Expected Information Matrix Evaluation and Use for Standard Error
+      Calculations
+    bibtitle: |-
+      Skew-t Expected Information Matrix Evaluation and Use for
+                Standard Error Calculations
+    author:
+    - R. Douglas Martin
+    - Chindhanai Uthaisaad
+    - Daniel Z. Xia
+    bibauthor: R. Douglas Martin and Chindhanai Uthaisaad and Daniel Z. Xia
+    abstract: '  Abstract Skew-t distributions derived from skew-normal distributions,
+      as developed by Azzalini            and several co-workers, are popular because
+      of their theoretical foundation and the availability of            computational
+      methods in the R package sn. One difficulty with this skew-t family is that
+      the elements            of the expected information matrix do not have closed
+      form analytic formulas. Thus, we developed            a numerical integration
+      method of computing the expected information matrix in the R package            skewtInfo.
+      The accuracy of our expected information matrix calculation method was confirmed            by
+      comparing the result with that obtained using an observed information matrix
+      for a very large            sample size. A Monte Carlo study to evaluate the
+      accuracy of the standard errors obtained with            our expected information
+      matrix calculation method, for the case of three realistic skew-t parameter            vectors,
+      indicates that use of the expected information matrix results in standard errors
+      as accurate as,            and sometimes a little more accurate than, use of
+      an observed information matrix.'
+    acknowledged: []
+    online: '2020-09-10'
+    CRANpkgs: sn
+    CTV_rev:
+    - Distributions
+    - Multivariate
+    suppl: 2.5 Kb
+    landing: '2020'
 - issue: 2009-1
   year: 2009
   volume: 1
