--- a/_config.yml
+++ b/_config.yml
@@ -1095,6 +1095,64 @@ issues:
     - Multivariate
     suppl: 2.5 Kb
     landing: '2020'
+  - slug: RJ-2020-012
+    title: 'rcosmo: R Package for Analysis of Spherical, HEALPix and Cosmological
+      Data'
+    bibtitle: |-
+      rcosmo: R Package for Analysis of Spherical, HEALPix and
+                Cosmological Data
+    author:
+    - Daniel Fryer
+    - Ming Li
+    - Andriy Olenko
+    bibauthor: Daniel Fryer and Ming Li and Andriy Olenko
+    abstract: '  Abstract The analysis of spatial observations on a sphere is important
+      in areas such as geosciences,            physics and embryo research, just to
+      name a few. The purpose of the package rcosmo is to conduct            efficient
+      information processing, visualisation, manipulation and spatial statistical
+      analysis of Cosmic            Microwave Background (CMB) radiation and other
+      spherical data. The package was developed for            spherical data stored
+      in the Hierarchical Equal Area isoLatitude Pixelation (Healpix) representation.            rcosmo
+      has more than 100 different functions. Most of them initially were developed
+      for CMB, but            also can be used for other spherical data as rcosmo
+      contains tools for transforming spherical data in            cartesian and geographic
+      coordinates into the HEALPix representation. We give a general description            of
+      the package and illustrate some important functionalities and benchmarks.'
+    acknowledged: []
+    online: '2020-09-10'
+    CRANpkgs:
+    - sp
+    - sphereplot
+    - rgl
+    - geosphere
+    - SpherWave
+    - SphericalCubature
+    - RandomFields
+    - geoR
+    - Directional
+    - gensphere
+    - CircNNTSR
+    - VecStatGraphs3D
+    - sm
+    - cosmoFns
+    - CRAC
+    - FITSio
+    - spider
+    - astro
+    - rcosmo
+    - microbenchmark
+    CTVs: Spatial
+    CTV_rev:
+    - Spatial
+    - ChemPhys
+    - SpatioTemporal
+    - Bayesian
+    - Distributions
+    - Graphics
+    - Multivariate
+    - NumericalMathematics
+    - SocialSciences
+    landing: '2020'
 - issue: 2009-1
   year: 2009
   volume: 1
